--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>SUBTITULO</h2>
     <h3>TITULO TERCIÁRIO</h3>
     <ul>
-    <li>itens a lista</li>
+    <li>itens da lista</li>
     </ul>
 </body>
 </html>
